<resources>
    <string name="app_name">HSP</string>
    <string name="FACEBOOK_APP_ID">732455713785142</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">71eb6a4adc964b69ff6c525503128f37</string>
    <string name="ak_login_protocol_scheme">ak71eb6a4adc964b69ff6c525503128f37</string>

    <string name="login_preference">com.tomato.tuantt.tomatoapp</string>
    <string name="login_status_preference">login_status_preference</string>
    <string name="title_activity_maps">Map</string>

    <string name="select_location_work">Chọn vị trí làm việc</string>
    <string name="select_location">Chọn vị trí này</string>
    <string name="msg_wait_load_location">Đang lấy địa chỉ tại tọa độ hiện tại</string>
    <string name="agree">Đồng ý</string>
    <string name="msg_alert_select_package">Vui lòng chọn tối thiểu 1 dịch vụ!</string>
    <string name="msg_alert_select_location">Vui lòng chọn địa chỉ</string>
    <string name="next">Tiếp theo</string>
    <string name="today">Hôm nay</string>
    <string name="tomorrow">Ngày mai</string>
    <string name="msg_alert_time_bigger">Vui lòng chọn mốc thời gian 3 giờ sau thời điểm hiện tại!</string>
    <string name="msg_load_fail">Lỗi khi lấy dữ liệu, bạn vui lòng kiểm tra lại kết nối mạng.</string>
    <string name="msg_load_fail_server">Lỗi khi lấy dữ liệu, chúng tôi đang xử lý hệ thống.</string>
    <string name="msg_get_address_error">Không lấy được địa chỉ bạn vừa chọn, vui lòng kiểm tra lại kết nối mạng !</string>
    <string name="enter_number_address">Vui lòng nhập số nhà / căn hộ</string>
    <string name="msg_alert_address">Vui lòng cung cấp địa chỉ nơi làm việc !</string>
    <string name="msg_alert_number_address">Vui lòng cung cấp số nhà / căn hộ</string>
    <string name="msg_alert_package">Vui lòng chọn tối thiểu 1 dịch vụ !</string>
    <string name="msg_wait_load_data">Đang tải dữ liệu...</string>

    <string name="contact_payment_title">Liên hệ thanh toán</string>
    <string name="enter_name">Nhập tên liên hệ</string>
    <string name="enter_email">Nhập email</string>
    <string name="msg_alert_name">Vui lòng nhập tên</string>
    <string name="msg_alert_phone_number">Vui lòng nhập số điện thoại</string>
    <string name="msg_alert_email_fail">Vui lòng nhập đúng email!</string>
    <string name="_18_08_2018">18-08-2018</string>
    <string name="msg_send_feedback_success">Chân thành cám ơn Quý khách đã đóng góp ý kiến!</string>
    <string name="msg_alert_report_content">Quý khách chưa điền nội dung góp ý!</string>
    <string name="title">Title</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>
    <string name="textview">TextView</string>
    <string name="invite_code">Mã giới thiệu của bạn</string>
    <string name="practices">Để có sự trải nghiệm tốt</string>
    <string name="questions">Câu hỏi thường gặp</string>
    <string name="benefits">Lợi ích khi sử dụng HSP</string>
    <string name="legal">Điều khoản sử dụng</string>
    <string name="app_info">Thông tin ứng dụng</string>
    <string name="contact">Liên hệ</string>
    <string name="todo">TODO</string>
    <string name="comments">Góp ý, báo lỗi</string>
    <string name="user_info">Xem thông tin tài khoản</string>
    <string name="share_text">Chia sẻ mã giới thiệu cho bạn bè. Bạn và ban của bạn sẽ được tặng 50,000 VND vào tài khoản. Khuyến mãi được áp dụng khi công việc đầu tiên hoàn thành.</string>
    <string name="share_now">Chia sẻ ngay</string>

    <string name="confirm_payment_title">Xác nhận thông tin</string>
    <string name="confirm_finish">Xác nhận và hoàn tất</string>

    <string name="not_find_location">Đang tìm địa chỉ...</string>

    <string name="msg_create_order_fail">Không kết nối đến hệ thống, bạn vui lòng kiểm tra lại kết nối mạng.</string>
    <string name="msg_create_order_fail_server">Lỗi khi tạo đơn !</string>
    <string name="msg_create_order_success">Tạo đơn thành công, cảm ơn bạn đã sử dụng dịch vụ !</string>

    <!--screen 2.2.1-->
    <string name="txt_start_day">Ngày bắt đầu</string>
    <string name="txt_address">Địa chỉ</string>
    <string name="txt_house_number">Số  nhà</string>
    <string name="txt_price">Giá tiền</string>
    <string name="txt_cash">VNĐ</string>
    <string name="txt_note">Ghi chú</string>
    <string name="txt_name_of_worker">Người thực hiện công việc này</string>
    <string name="title_hsp">HSP</string>
    <string name="txt_delete_job">Hủy công việc này</string>
    <string name="txt_change_time">Thay đổi ngày giờ</string>
    <string name="title_waite">Chờ làm</string>
    <string name="title_done">Đã làm</string>
    <string name="txt_status">Hệ thống sẽ chọn người nhận việc đầu tiên</string>
    <string name="msg_delete_order">Bạn có chắc sẽ xóa công việc này chứ?</string>
    <string name="cancel">Hủy</string>
    <string name="lbl_coin">Số tiền hiện có</string>
    <string name="txt_sure">Có</string>
    <string name="txt_new_post">Mới đăng</string>
    <string name="txt_accepted">Đã duyệt</string>
    <string name="txt_vnd">VNĐ</string>
    <string name="msg_delete_success">Đã hủy thành công</string>
    <string name="msg_error_presenter">Mã giới thiệu không tồn tại</string>
    <string name="msg_update_success">Thay đổi dữ liệu thành công</string>
    <string name="msg_delete_fail">Đã có lỗi xảy ra. Vui lòng thử lại sau</string>
    <string name="msg_error_network_fail">Đã có lỗi xảy ra. Vui lòng kiểm tra lại kết nối</string>
    <string name="txt_my_profile">Tài khoản</string>
    <string name="txt_full_name">Họ và tên</string>
    <string name="txt_email">Email</string>
    <string name="txt_present">Mã giới thiệu</string>
    <string name="txt_save">Lưu</string>
    <string name="msg_alert_code">Vui lòng nhập mã giới thiệu</string>

    <string name="msg_wait_create_order">Đang tạo đơn...</string>
    <string name="ok_txt">Đồng ý</string>
</resources>
