<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4">

    <include
        android:id="@+id/toolBar"
        layout="@layout/title_bar_with_icon_no_back" />

    <RelativeLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:layout_marginBottom="@dimen/spacing_small"
        android:background="@drawable/bkg_shadow"
        android:padding="@dimen/spacing_normal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_avatar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_marginBottom="@dimen/spacing_normal" />

        <TextView
            android:id="@+id/tv_lbl_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/civ_avatar"
            android:text="@string/txt_full_name"
            android:textAllCaps="true"
            android:textColor="@color/color_gray"
            android:textSize="@dimen/font_normal" />

        <com.tomato.tuantt.tomatoapp.createorder.CustomEditText
            android:id="@+id/edt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_lbl_user_name"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:background="@drawable/bkg_border_create_order"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="@dimen/spacing_small"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/color_gray"
            android:textSize="@dimen/font_normal" />


        <TextView
            android:id="@+id/tv_lbl_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_user_name"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/txt_email"
            android:textAllCaps="true"
            android:textColor="@color/color_gray"
            android:textSize="@dimen/font_normal" />

        <com.tomato.tuantt.tomatoapp.createorder.CustomEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_lbl_email"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:background="@drawable/bkg_border_create_order"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="@dimen/spacing_small"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/color_gray"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:id="@+id/tv_lbl_present"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_email"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/txt_present"
            android:textAllCaps="true"
            android:textColor="@color/color_gray"
            android:textSize="@dimen/font_normal" />

        <com.tomato.tuantt.tomatoapp.createorder.CustomEditText
            android:id="@+id/edt_present"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_lbl_present"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:background="@drawable/bkg_border_create_order"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="50"
            android:maxLines="1"
            android:padding="@dimen/spacing_small"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/color_gray"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_present"
            android:layout_marginTop="@dimen/spacing_large"
            android:background="@drawable/btn_save_profile"
            android:gravity="center"
            android:paddingTop="@dimen/spacing_small"
            android:paddingBottom="@dimen/spacing_small"
            android:text="@string/txt_save"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_large" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>