<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacing_small"
    android:background="@drawable/button_corner_without_gradient"
    android:padding="@dimen/spacing_normal">

    <RelativeLayout
        android:id="@+id/rll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_normal">

        <ImageView
            android:id="@+id/iv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/donvesinh" />

        <TextView
            android:id="@+id/tv_job_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_toEndOf="@id/iv_type"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/font_normal"
            tools:text="Don ve sinh" />

        <ImageView
            android:id="@+id/iv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/ic_more_vert_gray_24dp" />

        <ImageView
            android:id="@+id/iv_camera"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_marginEnd="29dp"
            android:layout_toStartOf="@id/iv_more"
            app:srcCompat="@drawable/photo" />

        <TextView
            android:id="@+id/tv_job_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_marginEnd="7dp"
            android:layout_toStartOf="@id/iv_camera"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/font_small"
            tools:text="Xac nhan" />


    </RelativeLayout>

    <View
        android:id="@+id/view_line_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rll_title"
        android:background="@color/color_gray" />

    <LinearLayout
        android:id="@+id/lnl_container_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_line_1"
        android:layout_marginTop="@dimen/spacing_normal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_start_day"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/font_small" />

            <TextView
                android:id="@+id/tv_start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/font_normal"
                android:textStyle="bold"
                tools:text="10:20 12/09/2018" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_address"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/font_small" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/font_normal"
                tools:text="46 To Huu, Trung Van, Nam Tu Liem" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_house_number"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/font_small" />

            <TextView
                android:id="@+id/tv_house_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/font_normal"
                tools:text="6969" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_price"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/font_small" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/font_normal"
                    android:textStyle="bold"
                    tools:text="165.000" />

                <TextView
                    android:id="@+id/tv_price2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/font_normal"
                    android:textStyle="bold"
                    tools:text="165.000" />

                <TextView
                    android:id="@+id/tv_payments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:text="@string/txt_cash"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/font_normal" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnl_status_worker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:gravity="center"
                android:text="@string/txt_status"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/font_small" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>